--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
 <html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://github.com/georocket/georocket" />
 <title>GeoRocket</title>
+<style>
+body {
+    background-color: #2d3f50;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.25rem;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+}
+
+a, a:visited, a:hover {
+    color: #ee5b1c;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+</style>
+</head>
 <body>
+<div class="container">
+<p>Please wait. You will be redirected to the
+<a href="https://github.com/georocket/georocket">GeoRocket GitHub page</a>.</p>
+<p>If the automatic redirection does not work click on the link.</p>
+</div>
+<script>
+window.location.href = "https://github.com/georocket/georocket";
+</script>
 </body>
 </html>
 
